--- a/src/index.css
+++ b/src/index.css
@@ -194,12 +194,12 @@ img {
   height: 100vh;
   position: absolute;
   top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 6em;
-  overflow: hidden;
 }
 
 .winner-container button {
